--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Journey</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
+    <title>SimpleBlog</title>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
