Add capybara tests for views and new forms

--- a/app/views/other_posts/index.html.erb
+++ b/app/views/other_posts/index.html.erb
@@ -13,7 +13,7 @@
 
   <tbody>
     <% @posts.each do |post| %>
-      <tr>
+      <tr class="post">
         <td><%= post.title %></td>
         <td><%= post.content %></td>
         <td><%= link_to 'Show', post %></td>
