--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,13 +12,7 @@
   </thead>
 
   <tbody>
-    <% @posts.each do |post| %>
-      <tr class="post">
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= link_to 'Show', post %></td>
-      </tr>
-    <% end %>
+    <%= render @posts %>
   </tbody>
 </table>
 
