--- a/app/views/awesome/posts/_form.html.erb
+++ b/app/views/awesome/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: post, url: other_posts_path, local: true, id: "post") do |form| %>
+<%= form_with(model: post, url: awesome_posts_path, local: true, id: "post") do |form| %>
   <% if post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
